Fix: auto-focus on input on iOS

--- a/packages/app/global.css
+++ b/packages/app/global.css
@@ -63,3 +63,10 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	-ms-overflow-style: scrollbar;
 }
+
+/* https://stackoverflow.com/questions/2989263/disable-auto-zoom-in-input-text-tag-safari-on-iphone */
+@supports (-webkit-overflow-scrolling: touch) {
+	input {
+		font-size: 16px;
+	}
+}
